--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,4 +37,4 @@ jobs:
         asset_path: ./release.zip
         asset_name: release.zip
         asset_content_type: application/zip
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.MEU_TOKEN }}
